--- a/forum-center/src/main/webapp/pages/user/edit_password.html
+++ b/forum-center/src/main/webapp/pages/user/edit_password.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="../../css/bootstrap.min.css"/>
-    <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../../js/vue.js"></script>
     <script src="../../plugins/elementui/index.js"></script>
-    <script type="text/javascript" src="../js/vue-router-3.0.1.js"></script>
+    <script type="text/javascript" src="../../js/vue-router-3.0.1.js"></script>
     <script type="text/javascript" src="../../js/axios-0.18.0.js"></script>
     <style>
         body {
@@ -142,8 +142,18 @@
                 this.$refs[formName].validate((valid) => {
                     if (valid) {
                         // 提交表单进行修改
-                       this.$message("修改成功");
-                       window.location.href='login.html'
+                        var param = {
+                            username:this.ruleForm.name,
+                            password:this.ruleForm.oldPass+"-"+this.ruleForm.newPass
+                        };
+                        axios.post("/user/modifyPassword.do", param).then((res)=>{
+                            if (res.data.flag) {
+                                this.$message.success(res.data.message);
+                                window.location.href='login.html'
+                            } else {
+                                this.$message.error(res.data.message)
+                            }
+                        })
                     } else {
                         console.log('error submit!!');
                         return false;
