--- a/forum-center/src/main/webapp/pages/article/search-article.html
+++ b/forum-center/src/main/webapp/pages/article/search-article.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../../plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="../../css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/special.css"/>
-    <script type="text/javascript" src="../js/jquery.js"></script>
+    <link rel="stylesheet" href="../../css/special.css"/>
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script type="text/javascript" src="../../js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../../js/vue.js"></script>
     <script src="../../plugins/elementui/index.js"></script>
     <script type="text/javascript" src="../../js/axios-0.18.0.js"></script>
+    <script type="text/javascript" src="../../js/link-param.js"></script>
 
     <style>
         #search-list{
@@ -21,51 +22,39 @@
 
         }
 
-        #search-list li{
-            float: left;
-            border-bottom: 1px grey dashed;
-            width: 350px;
-            margin-left: 30px;
-            font-size: 20px;
-            margin-top: 15px;
-            color: red;
-            font-family: DFKai-SB;
-            font-weight: bold;
-            padding-left: 10px;
-        }
-
-        #search-list li a{
+        .eslight{
             color: red;
         }
 
-        #search-list li a:hover{
-            text-decoration: none;
-            cursor: pointer;
-            color: blue;
+        .pagination-container{
+            margin-left: 251px;
         }
 
+        #headPic{
+            width:40px;
+            height:40px;
+        }
 
-
-    </style>
+ </style>
 </head>
 <body>
 <div id="app">
     <div id="header">
-        <img src="../../images/3.png">
+        <a href="../protal.html"><img src="../../images/3.png"></a>
         <img src="../../images/logo_right.jpg" class="pull-right" style="margin-right:120px">
-        <div class="pic"  v-if="user!=''">
+        <div class="pic"  v-if="JSON.stringify(user)!='{}'">
 
-            <img src="../../images/0.jpg" width="20px" height="20px" class="img-circle" style="margin-left: 5px;margin-bottom: 5px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            <span v-cloak class='item' style="font-size: 13px"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">{{user.name}}</span>
+            <img :src="'http://q2rcyhwpl.bkt.clouddn.com/'+user.avatarName" id="headPic" class="img-circle" style="margin-left: -21px;margin-bottom: 5px" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            <span v-cloak class='item' style="font-size: 13px"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">{{user.username}}</span>
         </div>
-        <div class="collapse" style="margin-left: 1233px;margin-top: -81px;position: absolute" id="collapseExample">
+        <div class="collapse" style="margin-left: 1233px;margin-top: -62px;position: absolute" id="collapseExample">
             <div  style="width: 110px;height: 70px; background-color: #ecf0f1;border-radius: 5% 5% 5% 5%">
                 <div style="padding-left: 10px;padding-top: 10px;"><a href="../user/edit_password.html" style="color: #8f0008;font-weight: bold"> 修改密码</a></div>
                 <div style="padding-left: 10px;margin-top: 10px;"><a style="font-weight: bold" href="#" @click="layout">退出</a></div>
             </div>
         </div>
-        <div class="pic" v-if="user==''">
-            <a href="../user/login.html" class="login" style="text-decoration: none;color: skyblue;font-weight: bold; font-size: 15px">登&nbsp;&nbsp;&nbsp;陆</a>
+        <div class="pic" v-if="JSON.stringify(user)=='{}'">
+            <a href="#" class="login" @click="login" style="text-decoration: none;color: skyblue;font-weight: bold; font-size: 15px">登&nbsp;&nbsp;&nbsp;陆</a>
         </div>
     </div>
 
@@ -85,32 +74,43 @@
             </div>
             <img src="../../images/li.jpg" width="200px" height="350px">
         </div>
-
-
-
         <div id="main">
             <div id="search">
-                <input type="text" class="form-control" v-model="this.pagination.queryString" placeholder="请输入查询的文章标题或者作者名"/>
+                <input type="text" v-model="pagination.queryString" class="form-control" placeholder="请输入查询的文章标题、作者昵称、标签和分类名称"/>
                 <button class="btn btn-primary" @click="search">搜索</button>
-
-                <div>
-                    <ul id="search-list">
-                        <li v-for="(article,index) in articles">
-                            <a @click="showDetails(article.id)">{{article.title}}</a>
-                        </li>
-                    </ul>
+                <div id="content">
+                    <div style="margin-top: 5px">&nbsp;</div>
+                    <div class="media" v-for="article in articles">
+                        <div class="media-left">
+                            <a href="#" @click.prevent="articleDetail(article.id)">
+                                <img class="tic_img" :src="'http://q2rcyhwpl.bkt.clouddn.com/'+article.coverUrl"  alt="...">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading"><a href="#" @click.prevent="articleDetail(article.id)" v-html="article.title"></a></h4>
+                            <span>阅读量:<code style="font-size: 14px">{{article.num}}</code></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <span>分类:<a href="#" @click="findByCid(article.cid)"><code style="font-size: 14px;color: green">{{article.cname}}<a></a></code></span><br>
+                            <span>作者：<span class="writer"><a href="#" @click="showWriter(article.uid)">{{article.username}}</a></span></span><br>
+                            <span v-if="article.labels != null">标签：
+                                 <span  class="labels" v-for="label in article.labels.split('，')">
+                                     {{label}}&nbsp;&nbsp;&nbsp;
+                                 </span>
+                             </span>
+                            <span class="pull-right"><code style="font-size: 14px;color: red;">{{article.pubTime}}</code></span>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="pagination-container" style="margin-top: 640px">
-                <el-pagination
-                        class="pagiantion"
-                        @current-change="handleCurrentChange"
-                        :current-page="pagination.currentPage"
-                        :page-size="pagination.pageSize"
-                        layout="total, prev, pager, next, jumper"
-                        :total="pagination.total">
-                </el-pagination>
-            </div>
+        </div>
+        <div class="pagination-container" style=" margin-top: 757px;width: 846px; text-align: center;">
+            <el-pagination
+                    class="pagiantion"
+                    @current-change="handleCurrentChange"
+                    :current-page="pagination.currentPage"
+                    :page-size="pagination.pageSize"
+                    layout="total, prev, pager, next, jumper"
+                    :total="pagination.total">
+            </el-pagination>
         </div>
         <div id="raside">
             <div id="box2">
@@ -155,16 +155,6 @@
 <script>
 
 
-    // 接收查询的条件
-    function getQuery() {
-        var qs = location.search.substr(1), // 获取url中"?"符后的字串
-            args = {}, // 保存参数数据的对象
-            items = qs.length ? qs.split("&") : [], // 取得每一个参数项,
-            item = null,
-            len = items.length;
-        var query = items[0].split("=")[1];
-        return query;
-    }
 
 
     $("#mark").hide();
@@ -174,14 +164,7 @@
         el:"#app",
         data:{
             dialogTableVisible: false,
-            /*   user:{
-                   id:1,
-                   name:'阿三',
-                   flag:false,
-                   status:1,          // 会员状态 0 不是会员  1 是会员
-                   time:'2019-12-4',  // 会员到期时间
-               },*/
-            user:'',  // 用户数据模型
+            user:{},  // 用户数据模型
             links:[    // 分类信息
                 {id:1,linkName:'CSDN论坛',link_href:'http://www.baidu.com'},
                 {id:1,linkName:'简书',link_href:'http://www.baidu.com'},
@@ -190,12 +173,14 @@
                 {id:1,linkName:'Git Hub',link_href:'http://www.baidu.com'},
             ],
 
+             // 查询的文章信息
             articles:[  // 查询的文章信息
-                {id:1,title:'mysql入门与放弃'},
-                {id:2,title:'mysql入门与放弃'},
-                {id:3,title:'mysql入门与放弃'},
-                {id:4,title:'mysql入门与放弃'},
-            ],
+                {id:1,title:'mysql入门与放弃',labels:"mysql,数据库",num:396,username:'阿三',uid:2,coverUrl:'./images/0.jpg',cname:"IO流",pubTime:'2012-12-25 12:24:42',cid:6},
+                {id:2,title:'mysql入门与放弃',labels:"mysql,数据库",num:396,username:'的概念',uid:2,coverUrl:'./images/0.jpg',cname:"springboot",pubTime:'2012-12-25 12:24:42',cid:5},
+                {id:3,title:'mysql入门与放弃',labels:"mysql,数据库",num:1000,username:'凶手你',uid:2,coverUrl:'./images/0.jpg',cname:"oracle",pubTime:'2012-12-25 12:24:42',cid:4},
+                {id:4,title:'mysql入门与放弃',labels:"mysql,数据库",num:396,username:'vhfui',uid:2,coverUrl:'./images/0.jpg',cname:"mysql",pubTime:'2012-12-25 12:24:42',cid:3},
+                {id:4,title:'mysql入门与放弃',labels:"mysql,数据库",num:396,username:'vhfui',uid:2,coverUrl:'./images/0.jpg',cname:"mysql",pubTime:'2012-12-25 12:24:42',cid:3},
+             ],
 
             topics:[  // 热门话题
                 {id:1,topic:'你发头阿拉时发v'},
@@ -213,29 +198,97 @@
             ],
             pagination: {//分页相关模型数据
                 currentPage: 1,//当前页码
-                pageSize:10,//每页显示的记录数
+                pageSize:5,//每页显示的记录数
                 total:0,//总记录数
                 queryString:null//查询条件
             },
 
+            cid:-1
+
         },
 
         created(){
-           var query = getQuery();
-           this.pagination.queryString = query
+
+            // 在token中获取user
+            axios.get("/user/getUserByToken.do").then((res)=>{
+               if (res.data.flag) {
+                   this.user = res.data.data;
+               }
+            });
+
+
+            var query = getParam("query");
+            let search = window.location.search;
+            // 当查询条件不携带参数时，则查询全部
+            if (search.length == 0){
+
+            } else {
+                if (query!=null){              // 带条件查询
+                    this.pagination.queryString = query;
+                }
+            }
+
+            this.findPage();
         },
 
-
-
         methods:{
+            findPage(){
+
+                var param = {
+                    currentPage:this.pagination.currentPage,
+                    pageSize:this.pagination.pageSize,
+                    queryString:this.pagination.queryString
+                };
+
+                if (this.cid == -1) {
+                    axios.post("/article/findAtricleByQuery.do", param).then((res) => {
+                        if (res.data.flag) {
+                            this.pagination.total = res.data.total;
+                            this.articles = res.data.rows;
+                        } else {
+                            this.$message.error(res.data.message)
+                        }
+                    })
+                 } else {
+                    axios.post("/article/findArticleByCid.do?cid="+this.cid, param).then((res)=>{
+                        if (res.data.flag ){
+                            this.pagination.total = res.data.total;
+                            this.articles = res.data.rows;
+                        } else {
+                            this.$message.error(res.data.message)
+                        }
+                    })
+                }
+            },
+
+            // 根据cid按照分类进行查询文章
+            findByCid(cid) {
+                this.cid = cid;
+                this.pagination.queryString = '';
+                this.pagination.currentPage = 1;
+                var param = {
+                    currentPage:this.pagination.currentPage,
+                    pageSize:this.pagination.pageSize,
+                    queryString:this.pagination.queryString
+                };
+                axios.post("/article/findArticleByCid.do?cid="+cid, param).then((res)=>{
+                    if (res.data.flag ){
+                        this.pagination.total = res.data.total;
+                        this.articles = res.data.rows;
+                    } else {
+                        this.$message.error(res.data.message)
+                    }
+                })
+            },
 
             // 跳转到文章详情页面
-            showDetails(id){
-              window.location.href='article.html?id='+id
+            articleDetail(id){
+              window.open('/pages/article/article.html?id='+id);
             },
             // 登陆时跳转页面
             login(){
-                window.location.href='../user/login.html'
+                var url = window.location.href ;
+                window.location.href='../user/login.html?redirectUrl='+url
             },
 
             // 按照分类id查询某一分类下的所有文章
@@ -245,33 +298,34 @@
 
             // 根据作者id查看作者详细信息
             showWriter(writerId){
-                alert(writerId);
-                window.location.href='../fan-atten/attention_detail.html'
-            },
-            // elementui 的下拉选择，弹出command的值
-            handleCommand(command) {
-                //this.$message('click on item ' + command);
-                // 此时command代表分类的id,可以根据分类的id查找到相关的文章
+                window.open('../fan-atten/attention_detail.html?id='+writerId);
             },
 
             // 点击搜索按钮开始进行搜索
             search(){
-              // 条件  this.pagination.queryString
+                this.cid = -1;
+                this.pagination.currentPage = 1;
+                this.pagination.pageSize = 5;
+                this.findPage();
             },
 
             // 用户退出
             layout(){
 
                 // 发送ajax,参数为用户id，通过id使session 失效
-
-                // 将user置空
-                this.user=''
-                $('.collapse').collapse('hide')
+                axios.get("/user/layout.do").then((res) => {
+                    if (res.data.flag) {
+                        window.location.href = "/pages/protal.html"
+                    } else {
+                        this.$message.error(res.data.message)
+                    }
+                });
 
             },
             // 切换页码
             handleCurrentChange: function (currentPage) {
                 this.pagination.currentPage = currentPage;
+                this.findPage();
             },
 
 
